# imgrep

./: README.md
backend/: .env.example  .gitignore  pyproject.toml  pytest.ini
backend/app/: chroma.py  clustering.py  constants.py  database.py  dependencies.py  embeddings.py  image_processor.py  main.py  models.py  sync.py
backend/app/api/: clusters.py  directories.py  embeddings.py  images.py  search.py  settings.py
backend/app/core/: config.py  database.py
backend/app/models/: sql.py
backend/app/repositories/: __init__.py  cluster.py  clustering_run.py  embedding.py  image.py  tracked_directory.py
backend/app/schemas/: __init__.py  cluster.py  directory.py  image.py  search.py  settings.py
backend/app/services/: __init__.py  chroma.py  clustering.py  directory_sync.py  embedding.py  image.py  image_ingestion.py  image_service.py  ingestion.py  ingestion_job.py  projection.py  search_service.py  sync_service.py  sync_strategies.py  vector_store.py
backend/app/services/embeddings/: __init__.py  siglip.py
backend/tests/: conftest.py  test_chroma.py  test_clustering.py  test_database.py  test_directories.py  test_directory_sync.py  test_duplicates.py  test_embeddings.py  test_embeddings_integration.py  test_sync_resilience.py  test_sync_strategies.py  test_tracked_directories_api.py
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ClusterNode.tsx  ExcalidrawToolbar.tsx  ImageItem.tsx  ImageViewer.tsx  InfiniteCanvas.tsx  (+4 more)
(+12 files in other folders)
